kubernetes/apps/iot/mosquitto/app/networkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/kubernetes/master/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mosquitto
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mosquitto
      app.kubernetes.io/name: mosquitto
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: {}
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - port: 8883
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: iot
      podSelector:
        matchLabels:
          mqtt.home.arpa/plaintext-client: "true"
    - ipBlock:
        cidr: 10.107.104.20/32
    - ipBlock:
        cidr: 10.107.107.175/32
    - ipBlock:
        cidr: 10.107.106.236/32
    ports:
    - port: 1883
      protocol: TCP
  egress: []
